refactoring y documentación de código. Probado con cs-pf.jucm y Ejemplo.jucm