@@ -6,104 +6,95 @@ import javax.swing.JTree;
 import javax.swing.tree.DefaultMutableTreeNode;
 
 import Transformer.Domain.Component;
-import Transformer.Domain.Relation2;
+import Transformer.Domain.Path;
 import Transformer.Domain.Responsibility;
 
+//TODO mejorar separación del armado del camino con el de los puertos
+
 /**
- * Esta clase tiene la responsabilidad de crear los puertos
+ * This class creates the ports of each element of the path, as well as the path
  * 
- * @author Usuario-Pc
+ * @author: María Eva Villarreal Guzmán. E-mail: villarrealguzman@gmail.com
  *
  */
 public class Port {
-	// TODO ver de colocar bien desde donde se llama
-	boolean band = true;
 
-	Relation2 relation;
+	static Path PATH;
 
 	/**
-	 * Se encarga de crear los puertos de todos los elementos posibles
+	 * Create port
 	 * 
 	 * @param xmlTree
 	 */
-	public void createPort(JTree xmlTree) {
+	public static void createPort(JTree xmlTree) {
 		DefaultMutableTreeNode rootNode = (DefaultMutableTreeNode) xmlTree.getModel().getRoot();
 
-		Component root = (Component) rootNode.getUserObject();
-
-		createPortRoot(xmlTree, root);
+		createPortRoot(xmlTree, rootNode);
 		createPortResponsability(xmlTree);
-		createPortComponent(xmlTree, rootNode, root);
+		createPortComponent(xmlTree, rootNode);
 		createPortElementOrAnd(xmlTree);
 	}
 
 	/**
-	 * Crea los puertos de entrada y salida de la vista
+	 * Creates input and output ports for the view
 	 * 
 	 * @param xmlTree
-	 * @param root
+	 * @param rootNode
 	 */
-	private void createPortRoot(JTree xmlTree, Component root) {
+	private static void createPortRoot(JTree xmlTree, DefaultMutableTreeNode rootNode) {
+		Component root = (Component) rootNode.getUserObject();
+
 		root.getInputPorts().add("erip");
 		root.getOutputPorts().add("esop");
 	}
 
 	/**
+	 * Create input port array to currentComponent
 	 * 
 	 * @param currentComponent
 	 * @param currentNode
 	 * @return
 	 */
 	private static ArrayList<String> getInputPort(Component currentComponent, DefaultMutableTreeNode currentNode) {
-		boolean band = true;
-		
+		boolean haveParent = true;
+
 		ArrayList<String> inputPorts = new ArrayList<String>();
+
 		DefaultMutableTreeNode auxCurrentNode = currentNode;
 		Component auxChild = currentComponent;
 
-
-
-		while (inputPorts.size() < 1 && band) {
+		while (inputPorts.size() < 1 && haveParent) {
 			DefaultMutableTreeNode parentData = (DefaultMutableTreeNode) auxCurrentNode.getParent();
 			if (parentData != null) {
 				Component parent = (Component) parentData.getUserObject();
 				for (int j = 0; j < parent.getInternalCouplingSecond().size(); j++) {
 					if (parent.getInternalCouplingSecond().get(j).equals(auxChild.getName())) {
-						//Verifica si es el primer elemento del camino
-						
-						if (parent.getInternalCouplingSecond().get(j).equals("ucm.map:StartPoint")) {
-							inputPorts.add(parent.getInternalCouplingName().get(j - 1));
-						} else {
-							inputPorts.add(parent.getInternalCouplingName().get(j));
-						}
+						inputPorts.add(parent.getInternalCouplingName().get(j));
 					}
 				}
 				auxChild = parent;
 				auxCurrentNode = parentData;
-			
+
 			} else {
-				band = false;
+				haveParent = false;
 			}
 
 		}
-		
-		
-		if (currentComponent.isStart()){
+		if (currentComponent.isStart()) {
 			inputPorts.add("0");
 		}
 		return inputPorts;
 	}
 
 	/**
-	 * Crea los puertos de dentrada y salida de los componentes
+	 * Creates input and output ports of components
 	 * 
 	 * @param xmlTree
 	 * @param currentNode
-	 * @param currentComponent
 	 */
-	private void createPortComponent(JTree xmlTree, DefaultMutableTreeNode currentNode, Component currentComponent) {
+	private static void createPortComponent(JTree xmlTree, DefaultMutableTreeNode currentNode) {
 
-		System.out.println(currentComponent.getName());
+		Component currentComponent = (Component) currentNode.getUserObject();
 
 		for (int i = 0; i < xmlTree.getModel().getChildCount(currentNode); i++) {
 			DefaultMutableTreeNode node = ((DefaultMutableTreeNode) xmlTree.getModel().getChild(currentNode, i));
@@ -112,70 +103,72 @@ public class Port {
 			if (domainNode instanceof Component) {
 				Component component = (Component) domainNode;
 				for (int j = 0; j < currentComponent.getInternalCouplingFirts().size(); j++) {
-					if (!(currentComponent.getInternalCouplingFirts().get(j)).equals("ucm.map:StartPoint")
-							&& !(currentComponent.getInternalCouplingSecond().get(j).equals("ucm.map:EndPoint"))) {
-						DefaultMutableTreeNode firstNode = getDefaultMutableTreeNode(xmlTree,
-								currentComponent.getInternalCouplingFirts().get(j));
-						currentComponent.getInternalCouplingName().add(this.setICN(currentComponent, currentNode,
-								xmlTree, firstNode, currentComponent.getInternalCouplingSecond().get(j)));
-					}
+					// Gets the first node of a relationship existing between an
+					// internal coupling of currentComponent
+					DefaultMutableTreeNode firstNode = getDefaultMutableTreeNode(xmlTree,
+							currentComponent.getInternalCouplingFirts().get(j));
+					// Generate internalCouplingName array of
+					// currentComponent
+					currentComponent.getInternalCouplingName().add(getNameRelation(currentComponent, xmlTree, firstNode,
+							currentComponent.getInternalCouplingSecond().get(j)));
 				}
-				for (int j = 0; j < getInputPort(component, node).size(); j++) {
-					component.getInputPorts().add("peip" + getInputPort(component, node).get(j));
+				// Creates input and output ports, which will serve for external
+				// coupling
+				ArrayList<String> inputPorts = getInputPort(component, node);
+				for (int j = 0; j < inputPorts.size(); j++) {
+					component.getInputPorts().add("peip" + inputPorts.get(j));
 				}
-				for (int j = 0; j < getOutputPort(component, node).size(); j++) {
-					component.getOutputPorts().add("seop" + getOutputPort(component, node).get(j));
+				ArrayList<String> outputPorts = getOutputPort(component, node);
+				for (int j = 0; j < outputPorts.size(); j++) {
+					component.getOutputPorts().add("seop" + outputPorts.get(j));
 				}
-				createPortComponent(xmlTree, node, component);
+				createPortComponent(xmlTree, node);
 			}
 		}
-
-		/*
-		 * if (band &&
-		 * currentComponent.getName().equals("GUISoftwareArchitectureEvaluation"
-		 * )) { currentComponent.getInputPorts().add("peip" + 0);
-		 * currentComponent.getOutputPorts().add("seop" + 0); band = false; }
-		 */
 	}
 
 	/**
-	 * Crea los puertos de dentrada y salida de las responsabilidades
+	 * Creates input and output ports of responsibilities. It also
+	 * simultaneously creates the path.
 	 * 
 	 * @param xmlTree
 	 */
-	private void createPortResponsability(JTree xmlTree) {
+	private static void createPortResponsability(JTree xmlTree) {
 
 		DefaultMutableTreeNode root = (DefaultMutableTreeNode) xmlTree.getModel().getRoot();
 		java.util.Enumeration e = root.breadthFirstEnumeration();
 
 		int count = 1;
 
-		relation = new Relation2();
+		PATH = new Path();
 
 		while (e.hasMoreElements()) {
 			DefaultMutableTreeNode currentNode = (DefaultMutableTreeNode) e.nextElement();
+			// Only leaves of the tree are responsibilities
 			if (currentNode.isLeaf()) {
 				Transformer.Domain.Node domainNode = (Transformer.Domain.Node) currentNode.getUserObject();
 				if (domainNode instanceof Transformer.Domain.Responsibility) {
 					domainNode.getInputPorts().add("prip");
 					domainNode.getOutputPorts().add("srop");
-					relation.getFirst().add(domainNode.getName());
-					// TODO ampliar no solo a 0
-					relation.getSecond().add(((Transformer.Domain.Responsibility) domainNode).getSuccessor().get(0));
-					relation.getPort().add(String.valueOf(count));
+					// Create path, assigning each relation a name
+					PATH.getFirst().add(domainNode.getName());
+					// TODO ampliar no solo a 0 para and y or
+					PATH.getSecond().add(((Transformer.Domain.Responsibility) domainNode).getSuccessor().get(0));
+					PATH.getPort().add(String.valueOf(count));
 					count++;
 				}
+				// TODO hacer un if para or y and
 			}
 		}
 	}
 
+	// TODO
 	/**
-	 * Crea los puertos de dentrada y salida de los elementos and y or del
-	 * camino
+	 * Creates the input and output ports of the elements and and or of the path
 	 * 
 	 * @param xmlTree
 	 */
-	private void createPortElementOrAnd(JTree xmlTree) {
+	private static void createPortElementOrAnd(JTree xmlTree) {
 
 		DefaultMutableTreeNode root = (DefaultMutableTreeNode) xmlTree.getModel().getRoot();
 		java.util.Enumeration e = root.breadthFirstEnumeration();
@@ -203,95 +196,129 @@ public class Port {
 	}
 
 	/**
+	 * Returns the name for the relation between firstNode and secondNode
 	 * 
 	 * @param currentComponent
 	 * @param currentNode
+	 * @param xmlTree
+	 * @param firstNode
+	 * @param SecondNode
 	 * @return
 	 */
-	private String setICN(Component currentComponent, DefaultMutableTreeNode currentNode, JTree xmlTree,
-			DefaultMutableTreeNode firstNode, String SecondNode) {
-		ArrayList<String> inputPorts = new ArrayList<String>();
-		DefaultMutableTreeNode auxCurrentNode = currentNode;
-		Component auxChild = currentComponent;
+	private static String getNameRelation(Component currentComponent, JTree xmlTree, DefaultMutableTreeNode firstNode,
+			String SecondNode) {
 
-		ArrayList<Responsibility> externalResponsibilities = new ArrayList<Responsibility>();
+		// The array will contain the responsibilities that are within inside of
+		// currentComponent
+		ArrayList<Responsibility> internalResponsibilities = new ArrayList<Responsibility>();
 
 		Component firstComponent = (Component) firstNode.getUserObject();
-		getResponsibilities(firstComponent, firstNode, xmlTree, externalResponsibilities);
+		getInternalResponsibilities(firstNode, xmlTree, internalResponsibilities);
 
-		for (int i = 0; i < externalResponsibilities.size(); i++) {
-			boolean band = true;
-			Responsibility responsibility = externalResponsibilities.get(i);
+		// The process consists of finding the two responsibilities that connect
+		// the firstNode to the SecondNode, and thus return the name of the
+		// relationship between those two responsibilities, since it is also the
+		// name of the relationship between those components
+
+		// It goes through each internal responsibility until it finds the one
+		// that is associated with the corresponding responsibility of
+		// secondNode
+		for (int i = 0; i < internalResponsibilities.size(); i++) {
+			boolean haveParent = true;
+			Responsibility responsibility = internalResponsibilities.get(i);
 			// TODO join and
-			DefaultMutableTreeNode node = getDefaultMutableTreeNode(xmlTree, responsibility.getSuccessor().get(0));
-			if (node != null) {
-				while (band) {
-					if (node.getParent() != null) {
-						DefaultMutableTreeNode parent = (DefaultMutableTreeNode) node.getParent();
-						Transformer.Domain.Node parentNode = (Transformer.Domain.Node) parent.getUserObject();
-						if (parentNode.getName().equals(SecondNode)) {
-							for (int j = 0; j < this.getRelation().getFirst().size(); j++) {
-								// TODO join and
-								// System.out.println(this.getRelation().getFirst().get(j));
-								// System.out.println(this.getRelation().getSecond().get(j));
-								// System.out.println(responsibility.getName()
-								// );
-								if (this.getRelation().getFirst().get(j).equals(responsibility.getName())
-										&& this.getRelation().getSecond().get(j)
-												.equals(responsibility.getSuccessor().get(0))) {
+			DefaultMutableTreeNode nextNode = getDefaultMutableTreeNode(xmlTree, responsibility.getSuccessor().get(0));
+			if (nextNode != null) {
+				while (haveParent) {
+					if (nextNode.getParent() != null) {
+						// Gets the parent of the nextNode, and if it is equal
+						// to secondNode it returns the name of the relation
+						DefaultMutableTreeNode nextParent = (DefaultMutableTreeNode) nextNode.getParent();
+						Transformer.Domain.Node nextParentNode = (Transformer.Domain.Node) nextParent.getUserObject();
+						if (nextParentNode.getName().equals(SecondNode)) {
+							for (int j = 0; j < getPath().getFirst().size(); j++) {
+								// To obtain the name it looks for a relation of
+								// the way between firstNode and secondNode, and
+								// looks in name assigned to the same one
+								if (getPath().getFirst().get(j).equals(responsibility.getName())
+										&& getPath().getSecond().get(j).equals(responsibility.getSuccessor().get(0))) {
+									// Between a firstNode and secondNode there
+									// may be more than one relationship, this
+									// checks that the name that is returned has
+									// not been used before
 									boolean esDiferente = true;
 									for (int k = 0; k < currentComponent.getInternalCouplingName().size(); k++) {
-										if (this.getRelation().getPort().get(j)
+										if (getPath().getPort().get(j)
 												.equals(currentComponent.getInternalCouplingName().get(k))) {
 											esDiferente = false;
 										}
 									}
 									if (esDiferente) {
-										return this.getRelation().getPort().get(j);
+										return getPath().getPort().get(j);
 									}
 								}
 							}
 						}
-						node = parent;
+						nextNode = nextParent;
 					} else {
-						band = false;
+						haveParent = false;
 					}
 
 				}
 			}
 		}
+
 		return null;
 	}
 
-	// Obtiene todas las responsabilidades que están dentro de un componente
-	private void getResponsibilities(Component currentComponent, DefaultMutableTreeNode currentNode, JTree xmlTree,
-			ArrayList<Responsibility> externalResponsibilities) {
+	/**
+	 * Gets all responsibilities that are inside a component
+	 * 
+	 * @param currentComponent
+	 * @param currentNode
+	 * @param xmlTree
+	 * @param internalResponsibilities
+	 */
+	private static void getInternalResponsibilities(DefaultMutableTreeNode currentNode, JTree xmlTree,
+			ArrayList<Responsibility> internalResponsibilities) {
+
+		// The process consists of traversing all the children of the current
+		// node. If the child node is a responsibility, then add it to the
+		// internalResponsabilities array; But being a component seeks the
+		// children of the same (recursive process) and obtains its
+		// responsibilities
 
 		for (int i = 0; i < xmlTree.getModel().getChildCount(currentNode); i++) {
 			DefaultMutableTreeNode node = ((DefaultMutableTreeNode) xmlTree.getModel().getChild(currentNode, i));
 			Transformer.Domain.Node nodeData = (Transformer.Domain.Node) node.getUserObject();
 
 			if (nodeData instanceof Transformer.Domain.Component) {
-				Transformer.Domain.Component nodeDataComponent = (Component) nodeData;
-				getResponsibilities(nodeDataComponent, node, xmlTree, externalResponsibilities);
+				getInternalResponsibilities(node, xmlTree, internalResponsibilities);
 			} else if (nodeData instanceof Transformer.Domain.Element
 					|| nodeData instanceof Transformer.Domain.Responsibility) {
+				// TODO ver para and y or
 				Responsibility nodeDataComponent = (Responsibility) nodeData;
-				externalResponsibilities.add(nodeDataComponent);
+				internalResponsibilities.add(nodeDataComponent);
 			}
 		}
 	}
 
-	private ArrayList<String> getOutputPort(Component child, DefaultMutableTreeNode currentNode) {
-		boolean band = true;
-		
-		
+	/**
+	 * Create output port array to currentComponent
+	 * 
+	 * @param child
+	 * @param currentNode
+	 * @return
+	 */
+	private static ArrayList<String> getOutputPort(Component child, DefaultMutableTreeNode currentNode) {
+		boolean haveParent = true;
+
 		ArrayList<String> outputPorts = new ArrayList<String>();
+
 		DefaultMutableTreeNode auxCurrentNode = currentNode;
 		Component auxChild = child;
-		
 
-		while (outputPorts.size() < 1 && band) {
+		while (outputPorts.size() < 1 && haveParent) {
 			DefaultMutableTreeNode parentData = (DefaultMutableTreeNode) auxCurrentNode.getParent();
 			if (parentData != null) {
 				Component parent = (Component) parentData.getUserObject();
@@ -303,83 +330,20 @@ public class Port {
 				auxChild = parent;
 				auxCurrentNode = parentData;
 			} else {
-				band=false;
+				haveParent = false;
 			}
 
 		}
-		
-		
-		if (child.isEnd()){
+
+		if (child.isEnd()) {
 			outputPorts.add("0");
 		}
 
-		
 		return outputPorts;
 	}
 
-	/*
-	 * private void getRelations(JTree xmlTree, DefaultMutableTreeNode
-	 * currentNode, Component currentComponent) {
-	 * 
-	 * ArrayList<String> portsName = ();
-	 * 
-	 * for (int i = 0; i < xmlTree.getModel().getChildCount(currentNode); i++) {
-	 * DefaultMutableTreeNode node = ((DefaultMutableTreeNode)
-	 * xmlTree.getModel().getChild(currentNode, i)); Transformer.Domain.Node
-	 * domainNode = (Transformer.Domain.Node) node.getUserObject();
-	 * 
-	 * DefaultMutableTreeNode parentData = (DefaultMutableTreeNode)
-	 * currentNode.getParent(); if (parentData != null) { Component parent =
-	 * (Component) parentData.getUserObject();
-	 * 
-	 * currentComponent.getExternalCouplingResponsability().add(domainNode.
-	 * getName()); currentComponent.getExternalCouplingResponsability().add();
-	 * 
-	 * }
-	 * 
-	 * 
-	 * 
-	 * 
-	 * 
-	 * 
-	 * for (int j = 0; j < getInputPort(responsibility, node).size(); j++) {
-	 * responsibility.getInputPorts().add("peip" + getInputPort(responsibility,
-	 * node).get(j)); } for (int j = 0; j < getOutputPort(responsibility,
-	 * node).size(); j++) { responsibility.getOutputPorts().add("seop" +
-	 * getOutputPort(responsibility, node).get(j)); }
-	 * createPortComponent(xmlTree, node, responsibility); } } }
-	 * 
-	 * 
-	 * public void getPortsName( Component parent, String childName){
-	 * ArrayList<String> portsName = new ArrayList<String>();
-	 * 
-	 * 
-	 * for (int i = 0; i < parent.getExternalCouplingSecondPort().size(); i++) {
-	 * 
-	 * if (parent.getExternalCouplingSecondPort().get(i).equals(childName)){
-	 * portsName.add(parent.getInternalCouplingName().get(i)); } } }
-	 */
-
-	/**
-	 * obtiene la primera responsabilidad del camino
-	 * 
-	 * @param parent
-	 * @param childName
-	 */
-	public void getFirstChild(Component root) {
-
-	}
-
-	public Relation2 getRelation() {
-		return relation;
-	}
-
-	public void setRelation(Relation2 relation) {
-		this.relation = relation;
-	}
-
 	/***
-	 * Devuelve el nodo del árbol cuyo nombre se corresponde con name
+	 * Returns the node of the tree whose name matches to the name parameter
 	 * 
 	 * @param name
 	 * @return
@@ -395,6 +359,10 @@ public class Port {
 			}
 		}
 		return null;
+	}
+
+	public static Path getPath() {
+		return PATH;
 	}
 
 }
